<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:fontFamily="@font/capriola"
        android:text="@string/your_kitchen_awaits"
        android:textAlignment="center"
        android:textColor="@color/colorTertiary"
        android:textSize="34sp"
        android:typeface="normal"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="@font/capriola"
        android:text="@string/login" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="@font/capriola"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/userLevelOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/childRoleBtn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:text="@string/child"
            android:textColor="@color/colorSecondary" />

        <RadioButton
            android:id="@+id/parentRadioBtn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:text="@string/parent"
            android:textColor="@color/colorSecondary" />
    </RadioGroup>

    <EditText
        android:id="@+id/parentUsername"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/parent_username"
        android:inputType="text" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="@font/capriola"
        android:text="@string/create_an_account" />

</androidx.appcompat.widget.LinearLayoutCompat>